<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/digit_1"
        style="@style/Pin_Digit_Indicator"
        android:layout_marginEnd="@dimen/dp27"
        android:layout_marginBottom="@dimen/dp16"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/digit_2"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/digit_2"
        style="@style/Pin_Digit_Indicator"
        android:layout_marginEnd="@dimen/dp27"
        app:layout_constraintBottom_toBottomOf="@id/digit_1"
        app:layout_constraintLeft_toRightOf="@id/digit_1"
        app:layout_constraintRight_toLeftOf="@id/digit_3"
        app:layout_constraintTop_toTopOf="@id/digit_1"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/digit_3"
        style="@style/Pin_Digit_Indicator"
        android:layout_marginEnd="@dimen/dp27"
        app:layout_constraintBottom_toBottomOf="@id/digit_1"
        app:layout_constraintLeft_toRightOf="@id/digit_2"
        app:layout_constraintRight_toLeftOf="@id/digit_4"
        app:layout_constraintTop_toTopOf="@id/digit_1"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/digit_4"
        style="@style/Pin_Digit_Indicator"
        app:layout_constraintBottom_toBottomOf="@id/digit_1"
        app:layout_constraintLeft_toRightOf="@id/digit_3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/digit_1"
        tools:ignore="ContentDescription" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/one_button"
        style="@style/Pin_Digit_Button"
        android:layout_marginEnd="@dimen/dp28"
        android:text="@string/text_digit_1"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/two_button"
        app:layout_constraintTop_toTopOf="@id/two_button" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/two_button"
        style="@style/Pin_Digit_Button"
        android:text="@string/text_digit_2"
        app:layout_constraintBottom_toTopOf="@id/five_button"
        app:layout_constraintLeft_toRightOf="@id/one_button"
        app:layout_constraintRight_toLeftOf="@id/three_button"
        app:layout_constraintTop_toBottomOf="@id/guideline_keyboard" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/three_button"
        style="@style/Pin_Digit_Button"
        android:layout_marginStart="@dimen/dp28"
        android:text="@string/text_digit_3"
        app:layout_constraintLeft_toRightOf="@id/two_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/two_button" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/four_button"
        style="@style/Pin_Digit_Button"
        android:text="@string/text_digit_4"
        app:layout_constraintLeft_toLeftOf="@id/one_button"
        app:layout_constraintRight_toRightOf="@+id/one_button"
        app:layout_constraintTop_toTopOf="@id/five_button" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/five_button"
        style="@style/Pin_Digit_Button"
        android:layout_marginTop="@dimen/dp15"
        android:text="@string/text_digit_5"
        app:layout_constraintBottom_toTopOf="@id/eight_button"
        app:layout_constraintLeft_toLeftOf="@id/two_button"
        app:layout_constraintRight_toRightOf="@id/two_button"
        app:layout_constraintTop_toBottomOf="@id/two_button" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/six_button"
        style="@style/Pin_Digit_Button"
        android:text="@string/text_digit_6"
        app:layout_constraintLeft_toLeftOf="@id/three_button"
        app:layout_constraintRight_toRightOf="@id/three_button"
        app:layout_constraintTop_toTopOf="@id/five_button" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/seven_button"
        style="@style/Pin_Digit_Button"
        android:text="@string/text_digit_7"
        app:layout_constraintLeft_toLeftOf="@id/one_button"
        app:layout_constraintRight_toRightOf="@+id/one_button"
        app:layout_constraintTop_toTopOf="@id/eight_button" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/eight_button"
        style="@style/Pin_Digit_Button"
        android:layout_marginTop="@dimen/dp15"
        android:text="@string/text_digit_8"
        app:layout_constraintBottom_toTopOf="@id/zero_button"
        app:layout_constraintLeft_toLeftOf="@id/two_button"
        app:layout_constraintRight_toRightOf="@id/two_button"
        app:layout_constraintTop_toBottomOf="@id/five_button" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/nine_button"
        style="@style/Pin_Digit_Button"
        android:text="@string/text_digit_9"
        app:layout_constraintLeft_toLeftOf="@id/three_button"
        app:layout_constraintRight_toRightOf="@id/three_button"
        app:layout_constraintTop_toTopOf="@id/eight_button" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/zero_button"
        style="@style/Pin_Digit_Button"
        android:layout_marginTop="@dimen/dp15"
        android:text="@string/text_digit_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/two_button"
        app:layout_constraintRight_toRightOf="@id/two_button"
        app:layout_constraintTop_toBottomOf="@id/eight_button" />

    <ImageView
        android:id="@+id/btn_fingerprint"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/bg_ripple_circle"
        android:scaleType="center"
        app:layout_constraintBottom_toBottomOf="@id/zero_button"
        app:layout_constraintLeft_toLeftOf="@id/one_button"
        app:layout_constraintRight_toRightOf="@id/one_button"
        app:layout_constraintTop_toTopOf="@id/zero_button"
        app:srcCompat="@drawable/ic_fingerprint"
        tools:ignore="ContentDescription,UnusedAttribute" />

    <ImageView
        android:id="@+id/btn_clear"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/bg_ripple_circle"
        android:scaleType="center"
        app:layout_constraintBottom_toBottomOf="@id/zero_button"
        app:layout_constraintLeft_toLeftOf="@id/three_button"
        app:layout_constraintRight_toRightOf="@id/three_button"
        app:layout_constraintTop_toTopOf="@id/zero_button"
        app:srcCompat="@drawable/ic_clear"
        tools:ignore="ContentDescription,UnusedAttribute" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_keyboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.12" />
</androidx.constraintlayout.widget.ConstraintLayout>